--- a/index.ipynb
+++ b/index.ipynb
@@ -215,16 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina', 'Mexico', 'USA', 'Morocco']"
+       "['USA', 'Argentina', 'Mexico', 'USA', 'Morocco']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
